rename some functions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="AngularApp">
+<html lang="en" ng-app="NewsApp">
 <head>
 	<title>Angular JSON App</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
